--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body{background:#111;color:#fff;padding:15px}
 <!-- VIP -->
 <div id="kontenVIP" style="display:none">
   <div class="header"><h2>⚡ BS.COM VIP ⚡</h2></div>
-  <div class="date">25-12-2025 (Total Odds: 22)</div>
+  <div class="date">25-12-2025 (Total Odds: 182)</div>
   
   <div class="card">
     <div class="league">EGYPT : LEAGUE CUP</div>
@@ -84,6 +84,16 @@ body{background:#111;color:#fff;padding:15px}
       <div class="pick">CS 1-2</div>
     </div>
     <div class="odds">Odds: 22</div>
+    <div class="status pending">pending</div>
+  </div>
+  
+  <div class="card">
+    <div class="league">SYRIA : PREMIER LEAGUE</div>
+    <div class="match">
+      <div class="teams">KHAN SAYKUN VS DAMASKUS AL AHLY</div>
+      <div class="pick">CS 1-1</div>
+    </div>
+    <div class="odds">Odds: 8.3</div>
     <div class="status pending">pending</div>
   </div>
   
