--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@ body{background:#111;color:#fff;padding:15px}
   <div class="card">
     <div class="league">SYRIA : PREMIER LEAGUE</div>
     <div class="match">
-      <div class="teams">KHAN SAYKUN VS DAMASKUS AL AHLY</div>
+      <div class="teams">JABLEH SC VS AL SHORTA DAMASKUS</div>
       <div class="pick">CS 1-1</div>
     </div>
     <div class="odds">Odds: 8.3</div>
-    <div class="status pending">pending</div>
+    <div class="status win">win</div>
   </div>
   
     <div class="date">24-12-2025 (Total Odds: 27)</div>
