--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ body{background:#111;color:#fff;padding:15px}
   </div>
   
   <div class="card">
-    <div class="league">SYRIA : PREMIER LEAGUE</div>
+    <div class="league">NORTHEN IRELAND</div>
     <div class="match">
-      <div class="teams">JABLEH SC VS AL SHORTA DAMASKUS</div>
+      <div class="teams">HOLLYWOOD FC VS BALLYMACASH</div>
       <div class="pick">CS 1-1</div>
     </div>
     <div class="odds">Odds: 8.3</div>
