Update match teams in index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body{background:#111;color:#fff;padding:15px}
   <div class="card">
     <div class="league">NORTHEN IRELAND</div>
     <div class="match">
-      <div class="teams">HOLLYWOOD FC VS BALLYMACASH</div>
+      <div class="teams">HOLLYWOOD VS BALLY</div>
       <div class="pick">CS 1-1</div>
     </div>
     <div class="odds">Odds: 8.3</div>
