Update match statuses and league names in index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body{background:#111;color:#fff;padding:15px}
       <div class="pick">AL RIYADH OVER 1.5</div>
     </div>
     <div class="odds">Odds: 1.40</div>
-    <div class="status pending">pending</div>
+    <div class="status lose">lose</div>
   </div>
 
   <div class="card">
@@ -68,7 +68,7 @@ body{background:#111;color:#fff;padding:15px}
       <div class="pick">HOME WIN</div>
     </div>
     <div class="odds">Odds: 1.50</div>
-    <div class="status pending">pending</div>
+    <div class="status win">win</div>
   </div>
 </div>
 
@@ -78,19 +78,19 @@ body{background:#111;color:#fff;padding:15px}
   <div class="date">25-12-2025 (Total Odds: 182)</div>
   
   <div class="card">
-    <div class="league">EGYPT : LEAGUE CUP</div>
+    <div class="league">ETHIOPIIA PREMIER LEAGUE</div>
     <div class="match">
-      <div class="teams">PYRAMIDS VS EL ISMAILY</div>
+      <div class="teams">ETHIOPIA VS DIRE DAWA</div>
       <div class="pick">CS 1-2</div>
     </div>
     <div class="odds">Odds: 22</div>
-    <div class="status pending">pending</div>
+    <div class="status win">win</div>
   </div>
   
   <div class="card">
-    <div class="league">NORTHEN IRELAND</div>
+    <div class="league">SYRIA : PREMIER LEAGUE</div>
     <div class="match">
-      <div class="teams">HOLLYWOOD FC VS BALLYMACASH RANGERS</div>
+      <div class="teams">KHAN SAYKUN VS DAMASKUS AL AHLY</div>
       <div class="pick">CS 1-1</div>
     </div>
     <div class="odds">Odds: 8.3</div>
