Update match details and leagues in index.html

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@ body{background:#000;color:#fff;padding:18px}
 <!-- FREE -->
 <div id="free">
   <div class="card">
-    <div class="league">PORTUGAL</div>
+    <div class="league">FA ENGLISH</div>
     <div class="match">
-      <div>SPORTING vs RIO AVE</div>
-      <div class="pick">HOME</div>
+      <div>PORTSMOUTH vs ARSENAL</div>
+      <div class="pick">V2</div>
     </div>
     <div class="pending">PENDING</div>
   </div>
@@ -112,19 +112,19 @@ body{background:#000;color:#fff;padding:18px}
   <div class="lockText">🔒 VIP LOCKED</div>
   
   <div class="card">
-    <div class="league">SERIE A</div>
+    <div class="league">FA ENGLISH</div>
     <div class="match">
-      <div>CEREMONENSE vs NAPOLI</div>
-      <div class="pick">CS 2-0</div>
+      <div>KING EMYU vs BRIGHTON</div>
+      <div class="pick">CS 1-2</div>
     </div>
     <div class="pending">PENDING</div>
   </div>
 
   <div class="card">
-    <div class="league">PREMIER LEAGUE</div>
+    <div class="league">PORTUGAL</div>
     <div class="match">
-      <div>SUNDERLAND vs LEEDS</div>
-      <div class="pick">CS 2-2</div>
+      <div>MOREIRENSE vs TONDELA</div>
+      <div class="pick">CS 1-1</div>
     </div>
     <div class="pending">PENDING</div>
   </div>
